# smartinbox-pro

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  evaluation_report.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: BLUEPRINT.md
server/: app.py  auth.py  smartinbox_pro_environment.py
smartinbox_env/: __init__.py  env.py  tasks.py
smartinbox_env/ai_engine/: categorizer.py  summarizer.py  trigger_engine.py
smartinbox_env/db/: models.py  session.py
smartinbox_env/imap_smtp/: handler.py
smartinbox_env/security/: pgp.py  scanner.py
